build_attempt_log.txt

[1;32mUsing java version 17.0.10-tem in this shell.[0m

[1;32mUsing gradle version 8.6 in this shell.[0m

> Configure project :
Project : => no module-info.java found

> Task :compileJava FAILED
/home/god/Documents/GitRepos/SyncPlay/src/main/java/com/syncplay/ui/MainController.java:16: error: cannot find symbol
import uk.co.caprica.vlcj.javafx.videosurface.JavaFxVideoSurfaceFactory;
                                             ^
  symbol:   class JavaFxVideoSurfaceFactory
  location: package uk.co.caprica.vlcj.javafx.videosurface
/home/god/Documents/GitRepos/SyncPlay/src/main/java/com/syncplay/ui/MainController.java:72: error: cannot find symbol
            mediaPlayer.videoSurface().set(JavaFxVideoSurfaceFactory.videoSurfaceForImageView(videoImageView));
                                           ^
  symbol:   variable JavaFxVideoSurfaceFactory
  location: class MainController
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.6/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 861ms
1 actionable task: 1 executed
